--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
     "@next/font": "13.1.6",
+    "@types/mssql": "^8.1.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "monaco-editor": "^0.35.0",
+    "mssql": "^9.1.1",
     "next": "13.1.6",
+    "openai": "^3.1.0",
+    "openapi-types": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sqlite3": "^5.1.4",
     "tedious": "^15.1.2",
-    "typescript": "4.9.5",
-    "openai": "^3.1.0",
-    "openapi-types": "^12.1.0"
+    "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/tedious": "^4.0.9"
   }
 }
