--- a/package.json
+++ b/package.json
@@ -15,20 +15,29 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "bcrypt": "^5.1.0",
+    "connect-sqlite3": "^0.9.13",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "express-session": "^1.17.3",
     "monaco-editor": "^0.35.0",
     "mssql": "^9.1.1",
     "next": "13.1.6",
+    "next-iron-session": "^4.2.0",
     "openai": "^3.1.0",
     "openapi-types": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
     "tedious": "^15.1.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/tedious": "^4.0.9"
+    "@types/bcrypt": "^5.0.0",
+    "@types/connect-sqlite3": "^0.9.2",
+    "@types/express-session": "^1.17.6",
+    "@types/tedious": "^4.0.9",
+    "@types/uuid": "^9.0.0"
   }
 }
