--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "openapi-types": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.8.1",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
     "tedious": "^15.1.2",
