--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "openapi-types": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.8.1",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
     "tedious": "^15.1.2",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "nextra": "latest",
+    "nextra-theme-docs": "latest"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
