--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
     "@next/font": "13.1.6",
+    "@tanstack/react-table": "^8.7.9",
     "@types/mssql": "^8.1.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
@@ -23,17 +24,13 @@
     "monaco-editor": "^0.35.0",
     "mssql": "^9.1.1",
     "next": "13.1.6",
-    "next-iron-session": "^4.2.0",
     "openai": "^3.1.0",
     "openapi-types": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
-    "tedious": "^15.1.2",
-    "typescript": "4.9.5",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest"
+    "typescript": "4.9.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
