--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "openapi-types": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-table": "^7.8.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
     "typescript": "4.9.5"
@@ -37,7 +36,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/connect-sqlite3": "^0.9.2",
     "@types/express-session": "^1.17.6",
+    "@types/react-table": "^7.7.14",
     "@types/tedious": "^4.0.9",
-    "@types/uuid": "^9.0.0"
+    "@types/uuid": "^9.0.0",
+    "gulp": "^4.0.2",
+    "react-table": "^7.8.0"
   }
 }
