--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "openapi-types": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
     "typescript": "4.9.5"
