--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,12 +6,7 @@
         "type": "node-terminal",
         "request": "launch",
         "command": "npm run dev",
-        "preLaunchTask": "watch",
-        "serverReadyAction": {
-          "pattern": "started server on .+, url: (https?://.+)",
-          "uriFormat": "%s",
-          "action": "debugWithChrome"
-        }
+        "preLaunchTask": "watch"
       }
     ]
   }
