--- a/package.json
+++ b/package.json
@@ -38,10 +38,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/connect-sqlite3": "^0.9.2",
     "@types/express-session": "^1.17.6",
-    "@types/react-table": "^7.7.14",
     "@types/tedious": "^4.0.9",
     "@types/uuid": "^9.0.0",
-    "gulp": "^4.0.2",
-    "react-table": "^7.8.0"
+    "gulp": "^4.0.2"
   }
 }
