--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@types/connect-sqlite3": "^0.9.2",
     "@types/express-session": "^1.17.6",
     "@types/tedious": "^4.0.9",
-    "@types/uuid": "^9.0.0",
-    "gulp": "^4.0.2"
+    "@types/uuid": "^9.0.0"
   }
 }
