--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
     "connect-sqlite3": "^0.9.13",
     "eslint": "8.34.0",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
     "sqlite": "^4.1.2",
