--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@types/connect-sqlite3": "^0.9.2",
     "@types/express-session": "^1.17.6",
     "@types/tedious": "^4.0.9",
-    "@types/uuid": "^9.0.0",
-    "tailwindcss": "^3.0.22"
+    "@types/uuid": "^9.0.0"
   }
 }
