--- a/package.json
+++ b/package.json
@@ -26,20 +26,30 @@
     "@docsearch/css": "3.0.0-alpha.41",
     "@docsearch/react": "3.0.0-alpha.41",
     "@headlessui/react": "^1.7.0",
+    "@monaco-editor/react": "^4.4.6",
+    "@tanstack/react-table": "^8.7.9",
+    "@types/bcrypt": "^5.0.0",
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "body-scroll-lock": "^3.1.3",
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "debounce": "^1.2.1",
     "ga-lite": "^2.1.4",
     "github-slugger": "^1.3.0",
+    "monaco-editor": "^0.36.0",
     "next": "12.3.2-canary.7",
     "next-remote-watch": "^1.0.0",
     "parse-numeric-range": "^1.2.0",
     "react": "0.0.0-experimental-cb5084d1c-20220924",
     "react-collapsed": "npm:@gaearon/react-collapsed@3.1.0-forked.1",
     "react-dom": "0.0.0-experimental-cb5084d1c-20220924",
+    "react-query": "^3.39.3",
     "remark-frontmatter": "^4.0.1",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "sass": "^1.58.3",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
