fucking finally git rid of errors

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
             "tsconfig": "tsconfig.json",
             "option": "watch",
             "problemMatcher": "$tsc-watch",
-            "isBackground": true,
+            "isBackground": false,
             "group": {
                 "kind": "build",
                 "isDefault": true
