--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "noImplicitReturns": false,
