--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "forceConsistentCasingInFileNames": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "forceConsistentCasingInFileNames": false,
     "noImplicitAny": false,
     "noImplicitReturns": false,
     "noImplicitThis": false,
