--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
+    "classnames": "^2.3.2",
     "connect-sqlite3": "^0.9.13",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "express-session": "^1.17.3",
     "monaco-editor": "^0.35.0",
     "next": "13.1.6",
-    "openai": "^3.1.0",
-    "openapi-types": "^12.1.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
@@ -34,7 +33,8 @@
     "sass-loader": "^13.2.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
