--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
+    "body-scroll-lock": "4.0.0-beta.0",
     "classnames": "^2.3.2",
     "connect-sqlite3": "^0.9.13",
     "eslint": "8.34.0",
@@ -27,6 +28,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-collapsed": "^3.6.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "sass": "^1.58.3",
