--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "express-session": "^1.17.3",
+    "idb": "^7.1.1",
     "monaco-editor": "^0.35.0",
     "next": "13.1.6",
     "react": "18.2.0",
