--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-collapsed": "^3.6.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "sass": "^1.58.3",
