--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/mssql": "^8.1.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
