--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/helper-module-imports": "^7.18.6",
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@monaco-editor/react": "^4.4.6",
     "@next/font": "13.1.6",
     "@tanstack/react-table": "^8.7.9",
+    "@types/classnames": "^2.3.1",
     "@types/mssql": "^8.1.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.3",
+    "babel-plugin-macros": "^3.1.0",
     "bcrypt": "^5.1.0",
     "body-scroll-lock": "4.0.0-beta.0",
     "classnames": "^2.3.2",
@@ -30,9 +37,9 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-collapsed": "^3.6.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
+    "react-fontawesome": "link:@types@fortawesome/react-fontawesome",
     "react-query": "^3.39.3",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
