--- a/package.json
+++ b/package.json
@@ -10,12 +10,7 @@
   },
   "dependencies": {
     "@babel/helper-module-imports": "^7.18.6",
-    "@fortawesome/fontawesome-free": "^6.3.0",
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@monaco-editor/react": "^4.4.6",
-    "@next/font": "13.1.6",
     "@tanstack/react-table": "^8.7.9",
     "@types/classnames": "^2.3.1",
     "@types/mssql": "^8.1.2",
@@ -34,15 +29,16 @@
     "express-session": "^1.17.3",
     "idb": "^7.1.1",
     "monaco-editor": "^0.35.0",
-    "next": "13.1.6",
+    "next": "^13.1.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
-    "react-fontawesome": "link:@types@fortawesome/react-fontawesome",
     "react-query": "^3.39.3",
+    "recoil": "^0.7.7",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
+    "sql.js": "^1.8.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
     "typescript": "4.9.5",
