--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "next-ts-openapi",
   "version": "0.1.0",
   "private": true,
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,6 +16,7 @@
   "dependencies": {
     "@babel/helper-module-imports": "^7.18.6",
     "@monaco-editor/react": "^4.4.6",
+    "@prisma/client": "^4.11.0",
     "@tanstack/react-table": "^8.7.9",
     "@types/classnames": "^2.3.1",
     "@types/mssql": "^8.1.2",
@@ -50,6 +56,7 @@
     "@types/express-session": "^1.17.6",
     "@types/tedious": "^4.0.9",
     "@types/uuid": "^9.0.0",
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "prisma": "^4.11.0"
   }
 }
