--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@babel/helper-module-imports": "^7.18.6",
+    "@linaria/core": "^4.2.8",
     "@monaco-editor/react": "^4.4.6",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-table": "^8.7.9",
@@ -29,15 +30,19 @@
     "bcrypt": "^5.1.0",
     "body-scroll-lock": "4.0.0-beta.0",
     "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
     "connect-sqlite3": "^0.9.13",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "express-session": "^1.17.3",
     "idb": "^7.1.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "monaco-editor": "^0.35.0",
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-data-grid": "^7.0.0-beta.26",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
@@ -48,7 +53,8 @@
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
     "typescript": "4.9.5",
-    "webpack": "^5.75.0"
+    "webpack": "^5.75.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
