--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sql.js": "^1.8.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
     "webpack": "^5.75.0",
     "xlsx": "^0.18.5"
