--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "18.0.28",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
     "axios": "^1.3.3",
     "babel-plugin-macros": "^3.1.0",
     "bcrypt": "^5.1.0",
